# spruce

./: .flake8  README.md  config.toml  pyproject.toml
spruce/: __main__.py  config.py
