[tool.poetry]
name = "szstatic"
version = "0.1.0"
description = ""
authors = ["Silas Zehnder <silaszehnder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-frontmatter = "^1.0.0"
markdown2 = "^2.4.6"
liquidpy = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
